--- a/week2/findgcd_benchmark/plot.conf
+++ b/week2/findgcd_benchmark/plot.conf
@@ -2,7 +2,8 @@ set terminal png truecolor font "/usr/share/fonts/TTF/LiHei Pro.ttf"
 set output "v1.png"
 # set autoscale
 set xlabel "Range"
-set ylabel "Time"
+set ylabel "Time (sec)"
+set title "findGCD benchmark (on AMD64 platform)"
 set style data lines
 set xrange [2:9999]
 plot "v1_fulldata.txt" using 1:2 title "findGCDv1", \
