plot.conf: fix generate file
Signed-off-by: Yen-Chin Lee <coldnew.tw@gmail.com>

--- a/week2/findgcd_benchmark/plot.conf
+++ b/week2/findgcd_benchmark/plot.conf
@@ -1,5 +1,5 @@
 set terminal png truecolor font "/usr/share/fonts/TTF/LiHei Pro.ttf"
-set output "v1.png"
+set output "benchmark.png"
 # set autoscale
 set xlabel "Range"
 set ylabel "Time (sec)"
