makefile: fix typo
Signed-off-by: Yen-Chin Lee <coldnew.tw@gmail.com>

--- a/week2/find_lastname/Makefile
+++ b/week2/find_lastname/Makefile
@@ -1,4 +1,4 @@
-BIN = findGCD_v1 findGCD_v2 findGCD_v3
+BIN = findLastname
 
 CROSS_COMPILE = arm-linux-gnueabihf-
 QEMU_ARM = qemu-arm -L /usr/arm-linux-gnueabihf
@@ -8,7 +8,7 @@ CFLAGS = -Wall -Werror -std=gnu99 -O0
 all: $(BIN)
 
 findLastname: findgcd.c main.c
-	$(CC) $(CFLAGS) -o $@ $^ -DFINDGCD_V1
+	$(CC) $(CFLAGS) -o $@ $^
 
 clean:
 	$(RM) $(BIN)
