--- a/week2/find_lastname/Makefile
+++ b/week2/find_lastname/Makefile
@@ -8,7 +8,7 @@ CFLAGS = -Wall -Werror -std=gnu99 -O0
 all: $(BIN)
 
 findLastname: phonebook.c main.c
-	$(CC) $(CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) -o $@ $^ -DPHONEBOOK_ORIGIN
 
 clean:
 	$(RM) $(BIN)
